--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
   "dependencies": {
     "@angular/common": "~11.2.0",
     "@angular/core": "~11.2.0",
+    "@angular/fire": "^6.1.5",
     "@angular/forms": "~11.2.0",
     "@angular/platform-browser": "~11.2.0",
     "@angular/platform-browser-dynamic": "~11.2.0",
     "@angular/router": "~11.2.0",
+    "@capacitor/cli": "^3.1.2",
+    "@capacitor/core": "^3.1.2",
     "@ionic/angular": "^5.5.2",
+    "firebase": "^8.9.0",
     "ngx-autosize": "^1.8.4",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
